fix : 일기관리 수정

--- a/module-admin/src/main/resources/templates/diaryManage/detailForm.html
+++ b/module-admin/src/main/resources/templates/diaryManage/detailForm.html
@@ -5,7 +5,7 @@
       <div class="slide"></div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('comment')" role="tab" aria-selected="false" id="commentTab">댓글([[${diary.commentCnt}]])</a>
+      <a class="nav-link" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('comment')" role="tab" aria-selected="false" id="commentTab">댓글(<span id="commentCnt">[[${diary.commentCnt}]]</span>)</a>
       <div class="slide"></div>
     </li>
   </ul>
