--- a/module-admin/src/main/resources/templates/diaryManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/diaryManage/infoForm.html
@@ -40,7 +40,7 @@
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="diaryCategory"><strong>카테고리</strong></label>
                     <div class="col-sm-12">
                         <input type="text" th:value="${diary.diaryCategory.value}"
-                               class="form-control form-control-sm form-control-round"
+                               class="form-control form-control-sm form-control-round" id="diaryCategory"
                                readonly>
                     </div>
                 </div>
