refactor: 비밀번호 찾기 > 이메일 검증코드 전송

--- a/module-admin/src/main/resources/templates/api/mail/codeTemplate.html
+++ b/module-admin/src/main/resources/templates/api/mail/codeTemplate.html
@@ -19,7 +19,7 @@
                 <th:block th:utext="${messageContent}"></th:block>
             </p>
             <p style="font-weight: 500; font-size:0.9em; border: 1px solid #ff8031; border-radius: 10px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 5%; width: 100px; padding: 5px;">
-                <th:block th:if=${verificationMailCode != null} th:text="${verificationMailCode}"></th:block>
+                <th:block th:if="${verificationMailCode != null}" th:text="${verificationMailCode}"></th:block>
             </p>
             <input type="button" class="button" value="새식일기 &gt;" style="background-color: #FF8031; border-radius: 5px; border: none; text-align: center; font-size: 0.9rem; font-family: 'Pretendard Std Variable'; font-weight: 900; color: white; display: block; margin-left: auto; margin-right: auto; margin-bottom: 5%; width: 120px; height: 40px; padding: 10px;">
         </div>
